@@ -1,5 +1,4 @@
 importingLinks=Tuodaan linkkej\u00e4 tiedostosta %s...
-successfullyExported=Linkit vietiin onnistuneesti tiedostoon %s
 noLinksFound=Tiedosto ei sis\u00e4lt\u00e4nyt linkkej\u00e4.
 fileIsCorruptException=Tiedostoa ei voi avata. Se voi olla vioittunut tai tuntematonta muotoa.
 notSupportedException=Tiedostoa ei tueta.
